deploy/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  labels:
    logging: "objectstore"   # Label x with value y
spec:
  containers:
    - name: mycontainer
      image: busybox
      command: ["sleep", "3600"]  # Sleep for 1 hour
      volumeMounts:
        - name: openfaas-webhook-cert
          mountPath: /etc/webhook/certs
          readOnly: true
  volumes:
    - name: openfaas-webhook-cert
      secret:
        secretName: openfaas-webhook-cert-secret
  imagePullSecrets:
    - name: ocir-auth
