deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-deployment
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-deployment
  template:
    metadata:
      labels:
        app: webhook-deployment
    spec:
      serviceAccountName: sample-mutating-webhook
      containers:
        - name: webhook
          image: iad.ocir.io/idt7ybnr03cb/hemant:120639
          # command: ["sleep", "3600"]
          ports:
            - containerPort: 443
          volumeMounts:
            - name: openfaas-webhook-cert
              mountPath: /etc/webhook/certs
              readOnly: true
      volumes:
        - name: openfaas-webhook-cert
          secret:
            secretName: openfaas-webhook-cert-secret
      imagePullSecrets:
        - name: ocir-auth
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-deployment
  namespace: jenkins
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: webhook-deployment
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-configuration
  # annotations:
  #   cert-manager.io/inject-ca-from: jenkins/openfaas-webhook-cert-secret
  #   certmanager.k8s.io/inject-ca-from: jenkins/openfaas-webhook-cert-secret
webhooks:
  - name: webhook.jenkins.svc
    admissionReviewVersions:
      - "v1beta1"
      - "v1"
    sideEffects: "None"
    timeoutSeconds: 30
    clientConfig:
      service:
        name: webhook-deployment
        namespace: jenkins
        path: /mutate
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lRQkxtdk1rSENFZzJhK1NoK0toOEpqekFOQmdrcWhraUc5dzBCQVFzRkFEQUEKTUI0WERUSTBNRFl4TkRBMU1qTXpObG9YRFRJME1Ea3hNakExTWpNek5sb3dBRENDQVNJd0RRWUpLb1pJaHZjTgpBUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTFNPYmdKTGw3bkowekJGZlBiUXFSeWhqNDlBMmNtWlovWTdVdFN3CjdnNDkzWnllVlNWWWNFT2UyRTl4cm1oekViMEh0czJ6ajRpUW5RY1NmblpIM1FYQTRHOE5nV1dqM21PWGVXY24KdHlsUEpoMmNVdzl6bXJEUGdaQ0o0cXZCa0hPWWkvZ1I4cVF1aHNIY1BlT2VIb0owdG9zTEljWXJHbWNEU2xpMQp0eWVnQmZoL2l2 [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
